feat: 결제 관련 예외 처리 개선 및 공통 에러 응답 DTO 추가
- shared 모듈에 공통 에러 응담 DTO ErrorResponse.java 를 추가합니다.
- 결제 도메인 전용 예외를 정의하고, 마찬가지로 에러코드도 정의합니다
- 해당 변경에 따른 테스트 코드 변경 및 글로벌 예외 핸들러를 추가합니